--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,12 +91,10 @@ nav ul{
     font-weight: 600;
 }
 .banner-title{
-    font-size: 40px;
-    font-weight: bold;
+    font-size: 45px;
 }
 .banner-description{
     font-size: 18px;
-    font-weight: 400;
     color: #757575;
 }
 .banner-profile-pic{
@@ -194,8 +192,15 @@ footer textarea{
     display: none;
 }
 @media screen and (max-width: 576px) {
-    .skill-conteiner{
+    .skill-conteiner,
+    nav,
+    nav > ul,
+    .about-items{
         flex-direction: column;
+    }
+    nav > ul{
+        gap: 20px;
+        margin: 0px;
     }
     .resume-content{
         flex-direction: column;
@@ -215,6 +220,8 @@ footer textarea{
     }
     .contact{
         flex-direction: column;
+        justify-content: center;
+        padding: 20px;
     }
     footer{
         padding: 10px;
@@ -227,6 +234,7 @@ footer textarea{
     }
     .form{
         width: 2px;
+        border: 10px solid tomato;
     }
     footer textarea{
         border-radius: 5px;
@@ -237,4 +245,33 @@ footer textarea{
     .section-title{
         text-align: center;
     }
-}
+    .about{
+        padding: 20px;
+    }
+    .header{
+        background-image: none;
+    }
+    .banner{
+        flex-direction: column-reverse;
+        margin: 20px;   
+    }
+    .banner-profile-pic{
+        width: 100%;
+    }
+    .middle{
+        flex-direction: column;
+        margin: 20px;
+    }
+    .banner-title{
+        font-weight: 100%;
+    }
+    .banner button{
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+        padding: 5px;
+    }
+    .banner-content{
+        width: 100%;
+    }
+}    
